# rag-quality-kit-py

./: README.md  pyproject.toml
src/rag_quality_kit/: __init__.py  score.py
tests/: test_score.py
